tests/machine/x/st/string_in_operator.out
Object: 'cat' error: did not understand #in
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #in (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/string_in_operator.st:3)
Object: 'dog' error: did not understand #in
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #in (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/string_in_operator.st:4)