tests/machine/x/st/string_in_operator.st
| s |
s := 'catch'.
Transcript show: (('cat' in s)) printString; cr.
Transcript show: (('dog' in s)) printString; cr.
